--- a/index.html
+++ b/index.html
@@ -914,6 +914,11 @@
       avatar.height = 60;
       car.addChild(avatar);
 
+      // Устанавливаем пивот машины на переднюю часть (сдвигаем назад на половину длины)
+      // Теперь car.position будет указывать на переднюю часть машины, а не на центр
+      car.pivot.set(0, 0); // пивот в левом верхнем углу
+      car.position.set(0, 0); // начальная позиция
+
       // Инициализируем контроллер светофоров
       carTrafficController = new CarTrafficController();
 
@@ -929,13 +934,20 @@
 
       // Устанавливаем машину на первую точку пути (которая должна быть на дороге)
       if (carPath.length > 0) {
-        car.position.set(carPath[0].x, carPath[0].y);
+        // Сдвигаем машину назад на половину длины, чтобы передняя часть была в carPath[0]
+        const carLength = 120; // длина машины
+        const offsetX = -carLength / 2 * Math.cos(0); // начальный поворот 0
+        const offsetY = -carLength / 2 * Math.sin(0);
+        car.position.set(carPath[0].x + offsetX, carPath[0].y + offsetY);
         console.log('Car starts at:', carPath[0]);
       } else {
         // Fallback: устанавливаем на ближайшую дорогу к дому
         const housePos = ROUTE_SCHEDULE[0].position;
         const roadPos = findNearestRoadPoint(housePos.x, housePos.y);
-        car.position.set(roadPos.x, roadPos.y);
+        const carLength = 120;
+        const offsetX = -carLength / 2 * Math.cos(0);
+        const offsetY = -carLength / 2 * Math.sin(0);
+        car.position.set(roadPos.x + offsetX, roadPos.y + offsetY);
         console.log('Car fallback position:', roadPos);
       }
 
@@ -1028,7 +1040,12 @@
       if (carSegment >= carPath.length - 1) {
         // Достигли конца пути
         // console.log('Reached end of path');
-        car.position.set(carPath[carPath.length - 1].x, carPath[carPath.length - 1].y);
+        const finalX = carPath[carPath.length - 1].x;
+        const finalY = carPath[carPath.length - 1].y;
+        const carLength = 120;
+        const offsetX = -carLength / 2 * Math.cos(car.rotation);
+        const offsetY = -carLength / 2 * Math.sin(car.rotation);
+        car.position.set(finalX + offsetX, finalY + offsetY);
         checkArrival();
         return;
       }
@@ -1049,7 +1066,14 @@
 
       // 🚦 ПРОВЕРКА СВЕТОФОРА ПЕРЕД ПРИБЛИЖЕНИЕМ К ПЕРЕКРЕСТКУ 🚦
       if (carTrafficController) {
-        const currentPos = { x: car.position.x, y: car.position.y };
+        // Вычисляем реальную позицию передней части машины
+        const carLength = 120;
+        const offsetX = carLength / 2 * Math.cos(car.rotation);
+        const offsetY = carLength / 2 * Math.sin(car.rotation);
+        const currentPos = {
+          x: car.position.x + offsetX,
+          y: car.position.y + offsetY
+        };
         const targetIntersection = { x: p2.x, y: p2.y }; // целевой перекресток
         const roadPositions = { verticalRoadXs, horizontalRoadYs };
 
@@ -1058,7 +1082,7 @@
 
         // ОТЛАДКА: показываем информацию о движении (только первые секунды)
         if (carSegment === 0 && carProgress < 20) {
-          console.log(`🚗 DEBUG: segment=${carSegment}, progress=${carProgress.toFixed(1)}, distance=${distanceToIntersection.toFixed(1)}, from=(${currentPos.x.toFixed(0)},${currentPos.y.toFixed(0)}) to=(${targetIntersection.x},${targetIntersection.y})`);
+          console.log(`🚗 DEBUG: segment=${carSegment}, progress=${carProgress.toFixed(1)}, distance=${distanceToIntersection.toFixed(1)}, carPos=(${car.position.x.toFixed(0)},${car.position.y.toFixed(0)}), frontPos=(${currentPos.x.toFixed(0)},${currentPos.y.toFixed(0)}) to=(${targetIntersection.x},${targetIntersection.y})`);
         }
 
         // Проверяем светофор только если:
@@ -1093,7 +1117,12 @@
         // Проверяем, не достигли ли мы конца пути
         if (carSegment >= carPath.length - 1) {
           // console.log('Reached final destination');
-          car.position.set(carPath[carPath.length - 1].x, carPath[carPath.length - 1].y);
+          const finalX = carPath[carPath.length - 1].x;
+          const finalY = carPath[carPath.length - 1].y;
+          const carLength = 120;
+          const offsetX = -carLength / 2 * Math.cos(car.rotation);
+          const offsetY = -carLength / 2 * Math.sin(car.rotation);
+          car.position.set(finalX + offsetX, finalY + offsetY);
           checkArrival();
           return;
         }
@@ -1111,13 +1140,17 @@
       const newX = p1.x + dx * t;
       const newY = p1.y + dy * t;
 
-      car.position.set(newX, newY);
-
       // Обновляем поворот машинки в направлении движения
       if (Math.abs(dx) > 0.1 || Math.abs(dy) > 0.1) {
         car.rotation = Math.atan2(dy, dx);
         avatar.rotation = -car.rotation;
       }
+
+      // Сдвигаем машину назад на половину длины, чтобы передняя часть была в (newX, newY)
+      const carLength = 120; // длина машины
+      const offsetX = -carLength / 2 * Math.cos(car.rotation);
+      const offsetY = -carLength / 2 * Math.sin(car.rotation);
+      car.position.set(newX + offsetX, newY + offsetY);
 
       // console.log(`Car at segment ${carSegment}/${carPath.length - 1}, progress: ${carProgress.toFixed(1)}/${segLen.toFixed(1)}, pos: (${newX.toFixed(1)}, ${newY.toFixed(1)})`);
 
