--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@
       padding: 0;
       background: #222;
       overflow: auto;
-      /* Разрешаем скролл */
       touch-action: pan-x pan-y;
-      /* Разрешаем панорамирование на мобильных устройствах */
       -webkit-overflow-scrolling: touch;
-      /* Плавный скролл на iOS */
     }
 
     canvas {
@@ -25,29 +22,22 @@
       height: 800px;
       border: 2px solid #444;
       margin: 0 auto;
-      /* Центрируем canvas */
       touch-action: none;
-      /* Отключаем стандартные жесты браузера для canvas */
     }
 
-    /* Стили для мобильных устройств */
-    @media (max-width: 768px) {
-      body {
-        overflow: auto;
-        /* Разрешаем скролл на мобильных */
-        position: relative;
-      }
+    /* Стили для панорамирования */
+    body {
+      overflow: auto;
+      position: relative;
+    }
 
-      canvas {
-        /* На мобильных устройствах canvas может быть больше экрана */
-        min-width: 1200px;
-        min-height: 800px;
-        /* Убираем центрирование для возможности панорамирования */
-        margin: 0;
-        position: absolute;
-        top: 0;
-        left: 0;
-      }
+    canvas {
+      min-width: 1200px;
+      min-height: 800px;
+      margin: 0;
+      position: absolute;
+      top: 0;
+      left: 0;
     }
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/7.2.4/pixi.min.js"></script>
@@ -57,6 +47,7 @@
   <script type="module">
     import { initTrafficLightsForIntersection, getDirectionForSegment, Direction, TrafficLightCoordinator } from './trafficLights.js';
     import { CarTrafficController } from './carTrafficControl.js';
+    import { PanningController } from './panning.js';
     const CONFIG = {
       WORLD_WIDTH: 3000,
       WORLD_HEIGHT: 2000,
@@ -181,70 +172,7 @@
       layout();
     });
 
-    // Добавляем поддержку панорамирования на мобильных устройствах
-    let isPanning = false;
-    let lastTouchX = 0;
-    let lastTouchY = 0;
-    let startScrollX = 0;
-    let startScrollY = 0;
 
-    // Обработчики touch событий для панорамирования
-    function handleTouchStart (e) {
-      if (e.touches.length === 1) {
-        isPanning = true;
-        lastTouchX = e.touches[0].clientX;
-        lastTouchY = e.touches[0].clientY;
-        startScrollX = window.scrollX;
-        startScrollY = window.scrollY;
-        e.preventDefault();
-      }
-    }
-
-    function handleTouchMove (e) {
-      if (isPanning && e.touches.length === 1) {
-        const touch = e.touches[0];
-        const deltaX = lastTouchX - touch.clientX;
-        const deltaY = lastTouchY - touch.clientY;
-
-        window.scrollTo(startScrollX + deltaX, startScrollY + deltaY);
-        e.preventDefault();
-      }
-    }
-
-    function handleTouchEnd (e) {
-      isPanning = false;
-    }
-
-    // Добавляем обработчики событий
-    document.addEventListener('touchstart', handleTouchStart, { passive: false });
-    document.addEventListener('touchmove', handleTouchMove, { passive: false });
-    document.addEventListener('touchend', handleTouchEnd, { passive: false });
-
-    // Дополнительная настройка для мобильных устройств
-    function setupMobilePanning () {
-      // Проверяем, является ли устройство мобильным
-      const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
-
-      if (isMobile) {
-        // Устанавливаем размер body для возможности скролла
-        document.body.style.width = '1200px';
-        document.body.style.height = '800px';
-        document.body.style.overflow = 'auto';
-
-        // Убираем масштабирование при двойном тапе
-        let lastTouchEnd = 0;
-        document.addEventListener('touchend', function (event) {
-          const now = (new Date()).getTime();
-          if (now - lastTouchEnd <= 300) {
-            event.preventDefault();
-          }
-          lastTouchEnd = now;
-        }, false);
-      }
-    }
-
-    // Инициализируем панорамирование после загрузки
-    setupMobilePanning();
 
     // Функция для парсинга буквенно-цифровых координат в индексы
     function parseIntersectionCoordinate (coord) {
@@ -262,28 +190,17 @@
     }
 
     function setupApp () {
-      // Проверяем, является ли устройство мобильным
-      const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
-
       app = new PIXI.Application({
-        width: isMobile ? CONFIG.WORLD_WIDTH : 1200,
-        height: isMobile ? CONFIG.WORLD_HEIGHT : 800,
+        width: 1200,
+        height: 800,
         autoDensity: true,
         resolution: window.devicePixelRatio || 1,
         backgroundColor: 0x3a6f3e
       });
       document.body.appendChild(app.view);
-
       // Включаем систему событий для всей сцены
       app.stage.eventMode = 'static';
-      app.stage.hitArea = new PIXI.Rectangle(0, 0, CONFIG.WORLD_WIDTH, CONFIG.WORLD_HEIGHT);
-
-      // Настраиваем canvas для мобильных устройств
-      if (isMobile) {
-        app.view.style.touchAction = 'none';
-        app.view.style.userSelect = 'none';
-        app.view.style.webkitUserSelect = 'none';
-      }
+      app.stage.hitArea = new PIXI.Rectangle(0, 0, 1200, 800);
     }
 
     function setupWorld () {
@@ -870,29 +787,10 @@
       const scale = Math.min(w / CONFIG.WORLD_WIDTH, h / CONFIG.WORLD_HEIGHT);
       world.scale.set(scale);
       world.pivot.set(0, 0);
-
-      // Проверяем, является ли устройство мобильным
-      const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
-
-      if (isMobile) {
-        // На мобильных устройствах не центрируем мир, оставляем возможность панорамирования
-        world.position.set(0, 0);
-
-        // Устанавливаем размер canvas для мобильных устройств
-        app.renderer.resize(CONFIG.WORLD_WIDTH, CONFIG.WORLD_HEIGHT);
-        app.view.style.width = CONFIG.WORLD_WIDTH + 'px';
-        app.view.style.height = CONFIG.WORLD_HEIGHT + 'px';
-      } else {
-        // На десктопе центрируем как раньше
-        world.position.set(
-          (w - CONFIG.WORLD_WIDTH * scale) / 2,
-          (h - CONFIG.WORLD_HEIGHT * scale) / 2
-        );
-        app.renderer.resize(w, h);
-        app.view.style.width = w + 'px';
-        app.view.style.height = h + 'px';
-      }
-
+      world.position.set(
+        (w - CONFIG.WORLD_WIDTH * scale) / 2,
+        (h - CONFIG.WORLD_HEIGHT * scale) / 2
+      );
       labelsLayer.children.forEach(label => {
         label.scale.set(1 / scale);
       });
@@ -1425,6 +1323,14 @@
         checkArrival();
       }
     }
+
+    // Инициализируем панорамирование
+    const panningController = new PanningController();
+
+    // Настраиваем body для панорамирования
+    document.body.style.width = '1200px';
+    document.body.style.height = '800px';
+    document.body.style.overflow = 'auto';
   </script>
 </body>
 
